blog/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: blog-rule
  namespace: istio-system
spec:
  host: blog
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog
  namespace: istio-system
spec:
  hosts:
    - "*.fluytcloud.com"
  gateways:
    - blog-gateway
  http:
    - match:
      - uri:
        prefix: /blog/
      rewrite:
        uri: "/"  
      route:
        - destination:
            host: blog.tcc.svc.cluster.local
            subset: v1
            port:
              number: 8080
